2007-04-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c: also use the middle mouse
	button for panning.

	* plug-ins/common/nova.c: override the default mouse handling of
	the GimpScrolledPreview and allow to reposition the center using
	the left mouse button. Fixes bug #364432.

	* app/tools/gimprectangletool.c: formatting.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.17.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff.c: initialize the pages[] array with
	the page sequence for non-niteractive runs. Otherwise it'll
	simply load N copies of page 0.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff.c: fixed an issue where the page selection
	dialog was being shown even for non-interactive runs.

2007-04-24  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff.c: added support to load multi-page TIFF
	images as single layered image or multiple individual per-page
	images, after prompting the user for choice using a
	GimpPageSelector widget. Fixes the rest of bug #138495.

2007-04-24  Mukund Sivaraman  <muks@mukund.org>

	* libgimpwidgets/gimppageselector.c: updated the API documentation
	to indicate that the returned array is sorted.

2007-04-24  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/poppler.c: set the page selector target
	from lastvals before showing the dialog

2007-04-24  Sven Neumann  <sven@gimp.org>

	* Made 2.3.16 development release.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* app/config/Makefile.am: fiddle with test_config_LDFLAGS to make
	test-config link again.

	* plug-ins/common/wind.c: increased MAX_STRENGTH to 100.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: unset 'show-border' on the
	GtkNotebook that holds the hints.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.[ch]: use GQuark for locale and